// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Buttons > Button component renders correctly 1`] = `
<button
  className=""
>
  <span
    className="p-4 font-[Raleway]"
  >
    Button
  </span>
</button>
`;

exports[`Buttons > The Button prop works 1`] = `
<button
  className="bg-green-500 hover:bg-green-700 p-4 rounded-md hover:shadow-lg text-white hover:text-black"
  onClick={[Function]}
>
  <span
    className="p-4 font-[Raleway]"
  >
    samuel
  </span>
</button>
`;

exports[`button > The button prop works 1`] = `
<button
  className="bg-blue-500 hover:bg-blue-700 p-4 rounded-md hover:shadow-lg  "
>
  <span
    className="p-4 font-[Raleway]"
  >
    samuel
  </span>
</button>
`;

exports[`button > button component renders correctly 1`] = `
<button
  className=""
>
  <span
    className="p-4 font-[Raleway]"
  >
    Button
  </span>
</button>
`;

exports[`test > The test prop works 1`] = `
<h1
  className=""
>
  My name is 
  samuel
</h1>
`;

exports[`test > test component renders correctly 1`] = `
<h1
  className=""
>
  My name is 
</h1>
`;

exports[`test > test component renders correctly 2`] = `
<button
  className=""
>
  <span
    className="p-4 font-[Raleway]"
  >
    Button
  </span>
</button>
`;
